// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`five 1`] = `
[
  ContentBlock {
    "assemblyName": "test",
    "end": 72.4,
    "isLeftEndOfDisplayedRegion": false,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:27.05..72.4-0",
    "offsetPx": 521,
    "parentRegion": {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "reversed": false,
      "start": 0,
    },
    "refName": "ctgA",
    "regionNumber": 0,
    "reversed": false,
    "start": 26.05,
    "type": "ContentBlock",
    "widthPx": 927.0000000000001,
  },
]
`;

exports[`four 1`] = `
[
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "end": undefined,
    "key": "{test}ctgA:1..250-0-beforeFirstRegion",
    "offsetPx": -100,
    "refName": undefined,
    "start": undefined,
    "type": "InterRegionPaddingBlock",
    "variant": "boundary",
    "widthPx": 100,
  },
  ContentBlock {
    "assemblyName": "test",
    "end": 250,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:1..250-0",
    "offsetPx": 0,
    "parentRegion": {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "start": 0,
    },
    "refName": "ctgA",
    "regionNumber": 0,
    "reversed": undefined,
    "start": 0,
    "type": "ContentBlock",
    "widthPx": 250,
  },
]
`;

exports[`one 1`] = `
[
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "end": undefined,
    "key": "{test}ctgA:1..200-0-beforeFirstRegion",
    "offsetPx": 0,
    "refName": undefined,
    "start": undefined,
    "type": "InterRegionPaddingBlock",
    "variant": "boundary",
    "widthPx": -0,
  },
  ContentBlock {
    "assemblyName": "test",
    "end": 200,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:1..200-0",
    "offsetPx": 0,
    "parentRegion": {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "start": 0,
    },
    "refName": "ctgA",
    "regionNumber": 0,
    "reversed": undefined,
    "start": 0,
    "type": "ContentBlock",
    "widthPx": 200,
  },
]
`;

exports[`three 1`] = `
[
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "end": undefined,
    "key": "{test}ctgA:49901..50000[rev]-0-reversed-beforeFirstRegion",
    "offsetPx": -100,
    "refName": undefined,
    "start": undefined,
    "type": "InterRegionPaddingBlock",
    "variant": "boundary",
    "widthPx": 100,
  },
  ContentBlock {
    "assemblyName": "test",
    "end": 50000,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:49901..50000[rev]-0-reversed",
    "offsetPx": 0,
    "parentRegion": {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "reversed": true,
      "start": 0,
    },
    "refName": "ctgA",
    "regionNumber": 0,
    "reversed": true,
    "start": 49900,
    "type": "ContentBlock",
    "widthPx": 100,
  },
]
`;

exports[`two 1`] = `
[
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "end": undefined,
    "key": "{test}ctgA:49801..50000[rev]-0-reversed-beforeFirstRegion",
    "offsetPx": 0,
    "refName": undefined,
    "start": undefined,
    "type": "InterRegionPaddingBlock",
    "variant": "boundary",
    "widthPx": -0,
  },
  ContentBlock {
    "assemblyName": "test",
    "end": 50000,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:49801..50000[rev]-0-reversed",
    "offsetPx": 0,
    "parentRegion": {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "reversed": true,
      "start": 0,
    },
    "refName": "ctgA",
    "regionNumber": 0,
    "reversed": true,
    "start": 49800,
    "type": "ContentBlock",
    "widthPx": 200,
  },
]
`;
